<resources>
    <string name="app_name">Sekawan Test</string>
    <string name="searchbar_hint">Search User</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="content_tab">Testing Tab</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorited">Favorited</string>
    <string name="title_list_favorite">List Favorite</string>
    <string name="list_favorite">List Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="menu">Menu</string>
    <string name="share">share</string>
    <string name="list_fav_empty">Favorite List is Empty</string>
    <string name="title_theme">Switch Theme</string>
    <string name="profile">Profile</string>
</resources>